// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article list header 1`] = `
.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  border-bottom-color: black;
  border-bottom-width: 0px;
  width: 100%;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-top: 30px;
}

.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #1D1D1B;
  font-family: "TimesModern-Bold";
  font-size: 30px;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100px;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

@media (min-width:768px) {
  .c0 {
    padding-top: 60px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-left: 0;
    padding-right: 0;
    max-width: 680px;
  }
}

@media (min-width:1320px) {
  .c6 {
    max-width: 760px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 116px;
  }
}

<style>
.IS1 {
  border-color: #FFFFFF;
  border-radius: 50;
  margin-bottom: 20px;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  width: 100;
}

.IS2 {
  color: #696969;
  font-family: TimesDigitalW04-RegularSC;
  font-size: 14;
  line-height: 14px;
  margin-top: 5px;
  -webkit-font-smoothing: antialiased;
}

.IS3 {
  align-self: center;
}

.IS4 {
  color: #006699;
  font-family: GillSansMTStd-Medium;
  font-size: 15;
  line-height: 17;
  padding-left: 5px;
  text-decoration-line: none;
}

.IS5 {
  flex-direction: row;
  padding-vertical: 10px;
  align-items: flex-end;
  padding-bottom: 10px;
  padding-top: 15px;
}

.IS6 {
  color: #333333;
  font-family: TimesDigitalW04;
  font-size: 16;
  line-height: 27px;
  text-align: center;
}

.IS7 {
  align-items: center;
  background-color: transparent;
  width: 100%;
}

.IS8 {
  width: 100%;
}

.IS9 {
  align-items: center;
  background-color: #F9F9F9;
  border-bottom-color: #F0F0F0;
  border-bottom-width: 1;
  flex-direction: column;
  padding-bottom: 40px;
  width: 100%;
}
</style>

<div
  className="c0 IS9"
>
  <div
    className="c1 IS8"
  >
    <div
      className="c2 IS7"
    >
      <div
        className="c3"
      >
        <Image
          className="IS1"
        />
      </div>
      <h1
        className="c4"
      >
        Name
      </h1>
      <h2
        className="c5 IS2"
      >
        job title
      </h2>
      <div
        className="c2 IS5"
      >
        <div
          className="c2 IS3"
        >
          <IconTwitter />
        </div>
        <TextLink
          className="IS4"
        >
          @
          twitter
        </TextLink>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7 IS6"
        >
          Camilla Long
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. an article list header loading 1`] = `
.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  padding-top: 30px;
}

@media (min-width:768px) {
  .c0 {
    padding-top: 60px;
  }
}

<style>
.IS1 {
  flex: 1;
}

.IS2 {
  border-color: #FFFFFF;
  border-radius: 50;
  height: 100;
  overflow: hidden;
  position: absolute;
  top: 30px;
  width: 100;
}

.IS3 {
  align-items: center;
  background-color: #F9F9F9;
  border-bottom-color: #F0F0F0;
  border-bottom-width: 1;
  min-height: 264;
  width: 100%;
}

.IS4 {
  align-items: center;
  background-color: #F9F9F9;
  border-bottom-color: #F0F0F0;
  border-bottom-width: 1;
  flex-direction: column;
  padding-bottom: 40px;
  width: 100%;
}
</style>

<div
  className="c0 IS4"
>
  <div
    className="c1 IS3"
  >
    <div
      className="c1 IS2"
    >
      <Gradient
        className="IS1"
      />
    </div>
  </div>
</div>
`;
